@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-17T00:32:20Z",
+  "timestamp" : "2024-09-20T00:39:18Z",
   "count_outdated" : 84,
   "uniques_outdated" : 66,
-  "count" : 87,
-  "uniques" : 69,
+  "count" : 88,
+  "uniques" : 70,
   "clones" : [
     {
       "timestamp": "2024-09-14T00:00:00Z",
@@ -25,6 +25,15 @@
     },
     {
       "timestamp": "2024-09-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
